# CPU-interpreter

./: .gitignore  CMakeLists.txt  CmakeLists.txt  ReadMe.md
include/: cpu.hpp  machine.hpp  memory.hpp
ruby/: assembler.rb  fibonacci_asm.rb
source/: cpu.cpp  main.cpp
tests/: test.cpp
